Script para carregar estoque

--- a/ProjetoEDOO/front-end/estoque.html
+++ b/ProjetoEDOO/front-end/estoque.html
@@ -80,7 +80,7 @@
                 <option value="L">(L)</option>
                 <option value="Un">(Un)</option>
             </select></label>
-            <label for="preco">Preço de Custo <input type="number" name="preco" id="preco" required></label>
+            <label for="preco">Preço por Medida <input type="number" name="preco" id="preco" required></label>
             <label for="quantM">Quant Mínima<input type="number" name="quantM" id="quantM" required></label>
         </form>
             <button id="adicionaritemBotao">Adicionar</button>
@@ -159,11 +159,11 @@
             <div class="cabecalho">
                 <p class="nome">Nome</p>
                 <p class="quant">Quant</p>
-                <p class="status">Status</p>
-                <p class="entrada">Entrada</p>
-                <p class="saida">Saída</p>
-                <p class="balanco">Balanço</p>
-                <p class="categoria">Categoria</p>
+                <p class="status">Preço</p>
+                <p class="entrada">Categoria</p>
+                <p class="saida">Status</p>
+                <p class="balanco">Entrada</p>
+                <p class="categoria">Saida</p>
             </div>
             <div class="itens">
                 <div class="item">
