--- a/ProjetoEDOO/front-end/login.html
+++ b/ProjetoEDOO/front-end/login.html
@@ -16,12 +16,13 @@
     </a>
     <div>
         <h2>Login</h2>
-        <form action="">
+        <form action="cardapio.html">
             <label for="">Email</label>
             <input type="text">
             <label for="">Senha</label>
             <input type="password">
             <button>Entrar</button>
+            
         </form>
 
     </div>
