mudanças no layout

--- a/ProjetoEDOO/front-end/estoque.html
+++ b/ProjetoEDOO/front-end/estoque.html
@@ -81,7 +81,7 @@
                 <option value="Un">(Un)</option>
             </select></label>
             <label for="preco">Preço por Medida <input type="number" name="preco" id="preco" required></label>
-            <label for="quantM">Quant Mínima<input type="number" name="quantM" id="quantM" required></label>
+            <label for="quantM">Quantidade<input type="number" name="quantM" id="quantM" required></label>
         </form>
             <button id="adicionaritemBotao">Adicionar</button>
 
