--- a/ProjetoEDOO/front-end/estoque.html
+++ b/ProjetoEDOO/front-end/estoque.html
@@ -77,7 +77,9 @@
             <label for="medida">Medida <select name="medida" id="medida" required>
                 <option value="" selected disabled>(xx)</option>
                 <option value="Kg">(Kg)</option>
+                <option value="g">(g)</option>
                 <option value="L">(L)</option>
+                <option value="ml">(ml)</option>
                 <option value="Un">(Un)</option>
             </select></label>
             <label for="preco">Preço por Medida <input type="number" name="preco" id="preco" required></label>
@@ -159,9 +161,9 @@
             <div class="cabecalho">
                 <p class="nome">Nome</p>
                 <p class="quant">Quant</p>
-                <p class="status">Preço</p>
-                <p class="entrada">Categoria</p>
-                <p class="saida">Status</p>
+                <p class="valor">Preço</p>
+                <p class="categoria">Categoria</p>
+                <p class="saida">Valor Total</p>
                 <p class="balanco">Entrada</p>
                 <p class="categoria">Saida</p>
             </div>
@@ -169,9 +171,9 @@
                 <div class="item">
                     <p class="nome">Nome</p>
                     <p class="quant">Quant</p>
-                    <p class="status">Status</p>
-                    <p class="entrada">Entrada</p>
-                    <p class="saida">Saída</p>
+                    <p class="valor">Status</p>
+                    <p class="categoria">Entrada</p>
+                    <p class="saida">Valor Total</p>
                     <p class="balanco">Balanço</p>
                     <p class="categoria">Categoria</p>
                     <img src="imagens/settings.svg" alt="" class="ajustes">
