Correções no front

--- a/ProjetoEDOO/front-end/estoque.html
+++ b/ProjetoEDOO/front-end/estoque.html
@@ -168,7 +168,7 @@
                 <p class="categoria">Saida</p>
             </div>
             <div class="itens">
-                <div class="item">
+               <!-- <div class="item">
                     <p class="nome">Nome</p>
                     <p class="quant">Quant</p>
                     <p class="valor">Status</p>
@@ -176,54 +176,11 @@
                     <p class="saida">Valor Total</p>
                     <p class="balanco">Balanço</p>
                     <p class="categoria">Categoria</p>
-                    <img src="imagens/settings.svg" alt="" class="ajustes">
+                    <img src="imagens/settings.svg" alt="" class="ajustes"> -->
 
                 </div>
 
-                <div class="item"><p class="nome">Nome</p><p class="quant">Quant</p><p class="status">Status</p><p class="categoria">Categoria</p><p class="entrada">Entrada</p><p class="saida">Saída</p><p class="balanco">Balanço</p><img src="imagens/settings.svg" alt="" class="ajustes">
-
-                </div>
-
-                <div class="item"><p class="nome">Nome</p><p class="quant">Quant</p><p class="status">Status</p><p class="categoria">Categoria</p><p class="entrada">Entrada</p><p class="saida">Saída</p><p class="balanco">Balanço</p><img src="imagens/settings.svg" alt="" class="ajustes">
-
-                </div>
-
-                <div class="item"><p class="nome">Nome</p><p class="quant">Quant</p><p class="status">Status</p><p class="categoria">Categoria</p><p class="entrada">Entrada</p><p class="saida">Saída</p><p class="balanco">Balanço</p><img src="imagens/settings.svg" alt="" class="ajustes">
-
-                </div>
-
-                <div class="item"><p class="nome">Nome</p><p class="quant">Quant</p><p class="status">Status</p><p class="categoria">Categoria</p><p class="entrada">Entrada</p><p class="saida">Saída</p><p class="balanco">Balanço</p><img src="imagens/settings.svg" alt="" class="ajustes">
-
-                </div>
-
-                <div class="item"><p class="nome">Nome</p><p class="quant">Quant</p><p class="status">Status</p><p class="categoria">Categoria</p><p class="entrada">Entrada</p><p class="saida">Saída</p><p class="balanco">Balanço</p><img src="imagens/settings.svg" alt="" class="ajustes">
-
-                </div>
-
-                <div class="item"><p class="nome">Nome</p><p class="quant">Quant</p><p class="status">Status</p><p class="categoria">Categoria</p><p class="entrada">Entrada</p><p class="saida">Saída</p><p class="balanco">Balanço</p><img src="imagens/settings.svg" alt="" class="ajustes">
-
-                </div>
-
-                <div class="item"><p class="nome">Nome</p><p class="quant">Quant</p><p class="status">Status</p><p class="categoria">Categoria</p><p class="entrada">Entrada</p><p class="saida">Saída</p><p class="balanco">Balanço</p><img src="imagens/settings.svg" alt="" class="ajustes">
-
-                </div>
-
-                <div class="item"><p class="nome">Nome</p><p class="quant">Quant</p><p class="status">Status</p><p class="categoria">Categoria</p><p class="entrada">Entrada</p><p class="saida">Saída</p><p class="balanco">Balanço</p><img src="imagens/settings.svg" alt="" class="ajustes">
-
-                </div>
-
-                <div class="item"><p class="nome">Nome</p><p class="quant">Quant</p><p class="status">Status</p><p class="categoria">Categoria</p><p class="entrada">Entrada</p><p class="saida">Saída</p><p class="balanco">Balanço</p><img src="imagens/settings.svg" alt="" class="ajustes">
-
-                </div>
-
-                <div class="item"><p class="nome">Nome</p><p class="quant">Quant</p><p class="status">Status</p><p class="categoria">Categoria</p><p class="entrada">Entrada</p><p class="saida">Saída</p><p class="balanco">Balanço</p><img src="imagens/settings.svg" alt="" class="ajustes">
-
-                </div>
-
-                <div class="item"><p class="nome">Nome</p><p class="quant">Quant</p><p class="status">Status</p><p class="categoria">Categoria</p><p class="entrada">Entrada</p><p class="saida">Saída</p><p class="balanco">Balanço</p><img src="imagens/settings.svg" alt="" class="ajustes">
-
-                </div>
-
+                
             </div>
         </div>
 
