criando popups cardápio

--- a/ProjetoEDOO/front-end/estoque.html
+++ b/ProjetoEDOO/front-end/estoque.html
@@ -75,14 +75,14 @@
                 <option value="Ingredientes para drinks">Ingredientes para drinks</option>
             </select></label>
             <label for="medida">Medida <select name="medida" id="medida" required>
-                <option value="" selected disabled>(xx)</option>
+                <option value="" selected disabled>( )</option>
                 <option value="Kg">(Kg)</option>
                 <option value="g">(g)</option>
                 <option value="L">(L)</option>
                 <option value="ml">(ml)</option>
                 <option value="Un">(Un)</option>
             </select></label>
-            <label for="preco">Preço/Medida <input type="number" name="preco" id="preco" required min="0" step="0.01"></label>
+            <label for="preco">Preço/Medida <input type="number" name="preco" id="preco" required min="0" step="0.01"> <p id="R">R$</p></label>
             <label for="quantM">Quantidade<input type="number" name="quantM" id="quantM" required min="0" step="1"></label>
         </form>
             <button id="adicionaritemBotao">Adicionar</button>
@@ -111,7 +111,7 @@
                 <option value="Ingredientes para drinks">Ingredientes para drinks</option>
             </select></label>
             <label for="medida">Medida <select name="medida" id="medida" >
-                <option value="" selected disabled>(xx)</option>
+                <option value="" selected disabled>( )</option>
                 <option value="Kg">(Kg)</option>
                 <option value="g">(g)</option>
                 <option value="L">(L)</option>
