terminei layout cardápio

--- a/ProjetoEDOO/front-end/cardapio.html
+++ b/ProjetoEDOO/front-end/cardapio.html
@@ -48,7 +48,7 @@
 
     </div>
 
-    <div id="overlayCarrinho"><div id="carrinho">
+    <div id="overlayCarrinho"><div class="carrinho">
         <div id="carrinhoPratos">
             <h2>Carrinho</h2>
             <div id="scroll">
