--- a/ProjetoEDOO/front-end/cardapio.html
+++ b/ProjetoEDOO/front-end/cardapio.html
@@ -23,11 +23,11 @@
     </header>
 
     <div id="nav">
-        <button>Entradas</button>
-        <button>Pratos Principais</button>
-        <button>Sobremesas</button>
-        <button>Acompanhamentos</button>
-        <button>Bebidas</button>
+        <button class="entradas">Entradas</button>
+        <button class="pratosPrincipais">Pratos Principais</button>
+        <button class="sobremesas">Sobremesas</button>
+        <button class="acompanhamentos">Acompanhamentos</button>
+        <button class="bebidas">Bebidas</button>
     </div>
 
     <div id="overlayPopup">
@@ -52,6 +52,26 @@
         <div id="carrinhoPratos">
             <h2>Carrinho</h2>
             <div id="scroll">
+                <div class="cardPrato">
+                    <p>Prato</p>
+                    <img src="imagens/xwhite.svg" alt="">
+                </div>
+                <div class="cardPrato">
+                    <p>Prato</p>
+                    <img src="imagens/xwhite.svg" alt="">
+                </div>
+                <div class="cardPrato">
+                    <p>Prato</p>
+                    <img src="imagens/xwhite.svg" alt="">
+                </div>
+                <div class="cardPrato">
+                    <p>Prato</p>
+                    <img src="imagens/xwhite.svg" alt="">
+                </div>
+                <div class="cardPrato">
+                    <p>Prato</p>
+                    <img src="imagens/xwhite.svg" alt="">
+                </div>
                 <div class="cardPrato">
                     <p>Prato</p>
                     <img src="imagens/xwhite.svg" alt="">
@@ -94,15 +114,15 @@
             <img src="imagens/Restaurante.jpg" alt="">
 
             <div id="container1">
-                <h1>Nome Restaurante</h1>
-                <h3>Descrição <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas inventore fuga illum aspernatur eaque? Dolorum earum officiis quo aliquam pariatur! Aut sequi dolorum dolores inventore ipsam officia itaque cupiditate iusto!</p></h3>
+                <h1>Pizzaria C(alabresa)++ </h1>
+                <h3>Descrição <p>A Pizzaria C(alabresa)++ combina o sabor tradicional da culinária italiana com um toque moderno e criativo. Inspirada em tecnologia e qualidade, oferece pizzas incríveis com ingredientes selecionados. Nossa especialidade, a clássica calabresa, é servida com inovação e carinho, conquistando todos!</p></h3>
                 <div class="infos">
                     <p>(81) 98989-3242</p>
                     <p>7599 Marina Rua - Frei Martinho, PE / 74021-458</p>
                 </div>
                 <div class="infos">
-                    <p>Preparo: xx min</p>
-                    <p>funcionamento</p>
+                    <p>Preparo Médio: 20 min</p>
+                    <p>Funcionamento: seg-sex 10h00-23h00</p>
 
                 </div>
                 
