Criação de pagina status e funções novas de pedidos

--- a/ProjetoEDOO/front-end/cardapio.html
+++ b/ProjetoEDOO/front-end/cardapio.html
@@ -15,8 +15,8 @@
         <a href="login.html"><img src="imagens/arrow.svg" alt="Logo" id="logo"></a>
         <div>
             <img src="imagens/Carrinho de Compras.svg" alt="carrinho" id="carrinhoIcon">
-            <a href=""><img src="imagens/Home.svg" alt="home"></a>
-            <a href=""><img src="imagens/Pedidos.svg" alt="pedidos"></a>
+            <a href="cardapio.html"><img src="imagens/Home.svg" alt="home"></a>
+            <a href="status.html"><img src="imagens/Pedidos.svg" alt="pedidos"></a>
             <a href=""><img src="imagens/Usuário.svg" alt="usuário"></a>
         </div>
         
