--- a/ProjetoEDOO/front-end/status.html
+++ b/ProjetoEDOO/front-end/status.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/fonte.css">
     <link rel="stylesheet" href="css/headerCliente.css">
     <link rel="stylesheet" href="css/status.css">
+    <script src="javascript/status.js" defer></script>
 </head>
 <body>
     <header>
@@ -27,9 +28,29 @@
         <div class="pedido">
             <div class="pedidoCabecalho">
             <p>Pedido #1212121 - 17:24</p>
-            <span>Esperando confirmacao</span>
+            <span>Esperando Confirmação</span>
             </div>
             <div class="pedidoConteudo">
+                <div class="endereco"><h3>Endereço:<p> Rua adsada scas da, 1012</p></h3> <h3>CEP:<p> 212121</p></h3></div>
+                <div class="itens">
+                    <h3>Itens:</h3>
+                    <p>Bruschetta 1x R$19.99</p>
+                    <p>Bruschetta 1x R$19.99</p>
+                    <p>Bruschetta 1x R$19.99</p>
+                </div>
+                <div class="valor">
+                    <h3>Pagamento:<p>dinheiro</p></h3> 
+                    <h3>Valor Total:<p> R$212</p></h3>
+                </div>
+            </div>
+        </div>
+
+        <div class="pedido">
+            <div class="pedidoCabecalho">
+            <p>Pedido #1212121 - 17:24</p>
+            <span>Esperando Confirmação</span>
+            </div>
+            <div class="pedidoConteudo fechado">
                 <div class="endereco"><h3>Endereço:<p> Rua adsada scas da, 1012</p></h3> <h3>CEP:<p> 212121</p></h3></div>
                 <div class="itens">
                     <h3>Itens:</h3>
