--- a/ProjetoEDOO/front-end/login.html
+++ b/ProjetoEDOO/front-end/login.html
@@ -18,9 +18,9 @@
         <h2>Login</h2>
         <form action="cardapio.html">
             <label for="">Email</label>
-            <input type="text">
+            <input type="text" required>
             <label for="">Senha</label>
-            <input type="password">
+            <input type="password" required>
             <button>Entrar</button>
             
         </form>
