Dando inicio à pagina do github.io do projeto

--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-<h1>hello</h1>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ProjetoEDOO</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="ProjetoEDOO/front-end/css/fonte.css">
+</head>
+<body>
+    <div id="elipse"><img src="ProjetoEDOO/front-end/imagens/index_images/Ellipse.png" alt=""></div>
+    <header>
+        <h2>Projeto EDOO</h2>
+        <div id="autores">
+            <a href="">Carlos Eduardo Teixeira,</a>
+            <a href="">João Victor Accioly</a>
+        </div>
+    </header>
+    <div id="heroBanner">
+        <div id="heroContent">
+            <h1>Sistema de Gerenciamento de Restaurante</h1>
+            <p>Aplicativo exclusivo de pedidos e gestão online para um restaurante, permitindo aos clientes visualizar o cardápio, fazer pedidos, enquanto o restaurante gerencia pedidos, estoque e pagamentos de forma centralizada.</p>
+            <div id="heroBtns">
+                <button>Código</button>
+                <button>Relatório</button>
+            </div>
+        </div>
+        <img src="ProjetoEDOO/front-end/imagens/index_images/heroImage.jpg" alt="Sistema de Gerenciamento de Restaurante">
+    </div>
+    <div id="visaoGeral">
+        <h2>Visão Geral</h2>
+        <div class="container">
+            
+            <img src="ProjetoEDOO/front-end/imagens/index_images/Restaurante.gif" alt="restaurante">
+            <div class="containerText">
+                <h3>Restaurante</h3>
+                <p>Nesta tela, os clientes podem navegar pelo cardápio digital, selecionar a quantidade de cada prato e adicionar observações personalizadas antes de finalizar o pedido. Além disso, há um carrinho de compras interativo, onde são reunidas todas as escolhas do usuário. Ao concluir o pedido, o sistema coleta as informações de endereço, pagamento e detalhes dos pratos para envio ao restaurante.</p>
+            </div>
+        </div>
+    </div>
+
+</body>
+</html>
