--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <div id="video">
             <h2>Vídeo Apresentando Projeto</h2>
-            <iframe width="560" height="315" src="https://www.youtube.com/watch?v=XkzDEqRuaC8" frameborder="0" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/XkzDEqRuaC8?si=_WKMNp22eUnMsA_Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </div>
 
